Import - body en left join

--- a/config/install/migrate_plus.migration.kgaut_articles_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_articles_node.yml
@@ -16,6 +16,7 @@ process:
   uid: uid
   sticky: sticky
   created: changed
+  status: status
   changed: created
   field_tags:
     plugin: migration
