--- a/config/install/migrate_plus.migration.kgaut_articles_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_articles_node.yml
@@ -28,8 +28,20 @@ process:
   # addition to the full text value. We use / to separate the field name from
   # the internal field value being set, and put it in quotes because / is a
   # YAML special character.
-  'body/value': body_value
-  'body/summary': body_summary
+  'body/value':
+    -
+      plugin: kgaut_fix_body_image_path_process
+      images_source: '/sites/kgaut.net/files'
+      url_source: 'https://kgaut.net/'
+      images_destination: 'public://wysiwyg/'
+      source: body_value
+  'body/summary':
+    -
+      plugin: kgaut_fix_body_image_path_process
+      images_source: '/sites/kgaut.net/files'
+      url_source: 'https://kgaut.net/'
+      images_destination: 'public://wysiwyg/'
+      source: body_summary
   'body/format':
     plugin: default_value
     default_value: 'full_html'
