Migration - ajout dépendances

--- a/config/install/migrate_plus.migration.kgaut_articles_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_articles_node.yml
@@ -64,6 +64,7 @@ process:
 migration_dependencies:
   optional:
     - kgaut_article_tags
+    - kgaut_managed_files
 dependencies:
   enforced:
     module:
