--- a/config/install/migrate_plus.migration.kgaut_realisation_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_realisation_node.yml
@@ -63,6 +63,7 @@ process:
 migration_dependencies:
   optional:
     - kgaut_realisation_tags
+    - kgaut_managed_files
 dependencies:
   enforced:
     module:
