--- a/config/install/migrate_plus.migration.kgaut_snippets_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_snippets_node.yml
@@ -59,6 +59,7 @@ process:
 migration_dependencies:
   optional:
     - kgaut_snippet_tags
+    - kgaut_managed_files
 dependencies:
   enforced:
     module:
