--- a/config/install/migrate_plus.migration.kgaut_page_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_page_node.yml
@@ -41,6 +41,9 @@ process:
   'body/format':
     plugin: default_value
     default_value: 'full_html'
+migration_dependencies:
+  optional:
+    - kgaut_managed_files
 dependencies:
   enforced:
     module:
