--- a/config/install/migrate_plus.migration.kgaut_articles_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_articles_node.yml
@@ -62,7 +62,7 @@ process:
 # The general rule of thumb is that any migrations referenced by migration
 # process plugins should be required here.
 migration_dependencies:
-  optional:
+  required:
     - kgaut_article_tags
     - kgaut_managed_files
 dependencies:
