Realisation - migration date réalisation

--- a/config/install/migrate_plus.migration.kgaut_realisation_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_realisation_node.yml
@@ -49,6 +49,7 @@ process:
   'field_realisation_missions/format':
     plugin: default_value
     default_value: 'full_html'
+  field_realisation_date : realisation_date
 # Our beer nodes have references to terms and users, so we want those to be
 # imported first. We make that dependency explicit here - by putting those
 # migrations under the 'required' key, we ensure that the tools will prevent
