Migration - realisation - fusion de deux champs

--- a/config/install/migrate_plus.migration.kgaut_realisation_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_realisation_node.yml
@@ -45,7 +45,7 @@ process:
   'body/format':
     plugin: default_value
     default_value: 'full_html'
-  'field_realisation_missions/value': field_realisation_missions_value
+  'field_realisation_missions/value': missions
   'field_realisation_missions/format':
     plugin: default_value
     default_value: 'full_html'
