Fix comment import

--- a/config/install/migrate_plus.migration.kgaut_commentaires.yml
+++ b/config/install/migrate_plus.migration.kgaut_commentaires.yml
@@ -15,6 +15,9 @@ process:
   comment_type:
     plugin: default_value
     default_value: 'comment'
+  field_name:
+    plugin: default_value
+    default_value: 'comment'
   field_name: comment_type
   subject: subject
   uid: uid
