Fix created / changed mixup

--- a/config/install/migrate_plus.migration.kgaut_articles_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_articles_node.yml
@@ -18,9 +18,9 @@ process:
   vid: vid
   uid: uid
   sticky: sticky
-  created: changed
+  created: created
+  changed: changed
   status: status
-  changed: created
   field_tags:
     plugin: migration
     migration: kgaut_article_tags
