--- a/config/install/migrate_plus.migration.kgaut_page_node.yml
+++ b/config/install/migrate_plus.migration.kgaut_page_node.yml
@@ -17,8 +17,8 @@ process:
   uid: uid
   sticky: sticky
   status: status
-  created: changed
-  changed: created
+  created: created
+  changed: changed
   # Some Drupal fields may have multiple components we may want to set
   # separately. For example, text fields may have summaries (teasers) in
   # addition to the full text value. We use / to separate the field name from
